# data-exploration-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_PUBLISHING_GUIDE.md  INSTALLATION.md  INTERVIEW_ARCHITECTURE_PRESENTATION.md  INTERVIEW_QUICK_REFERENCE.md  INTERVIEW_SUCCESS_GUIDE.md  LICENSE  MCP_ARCHITECTURE_DIAGRAMS.md  MCP_FUNCTIONALITIES_OVERVIEW.md  MCP_QUICK_REFERENCE.md  MCP_SETUP_GUIDE.md  OPTIMIZED_WORKFLOW_GUIDE.md  PRODUCTION_ENGINEERING_SHOWCASE.md  PROJECT_STRUCTURE.md  README.md  README_CONCISE.md  cursor_mcp_config.json  privacy_demo.py  privacy_verification.py  pyproject.toml  test_dataset.csv  test_mcp_connection.py  test_privacy.py
src/: __init__.py  main.py  simple_mcp_server.py
src/utils/: __init__.py
